# AgenticRag

./: .dockerignore  .gitignore  .trivyignore  Dockerfile  Dockerfile.api  client.py  compose.yml  functions.py  hello.py  main.py  pyproject.toml  rag.py  readme.md  tool_definitions.py  worker.py
agents/: __init__.py  base.py  quiz.py  reasoning.py  registry.py  router.py  summary.py  visualization.py
alembic/: env.py
api/: chat.py  chat_sessions.py  health.py  project_chat.py  projects.py  rate_limit.py  server.py  session.py
clients/: __init__.py
database/: core.py  docker-compose.yml  init.sql  models.py  seed.py  setup-reader.sh
docs/: contributing.md  deployment.md  evaluation.md  getting-started.md  index.md  security.md
evals/: README.md  config.yaml  judge.py  metrics.py  rubric.py  run_eval.py
frontend/: .env.development.example  .gitignore  Dockerfile  Dockerfile.dev  auth.config.ts  auth.ts  package.json  proxy.ts
functions/: __init__.py  browser.py  compare_kb.py  crawl_website.py  local_kb.py  portfolio.py  query_db.py  search.py  tool_router.py
llm/: __init__.py  base.py  client.py  factory.py  response_utils.py
memory/: __init__.py  cache.py  redis_client.py  semantic.py
minio/: cors.xml
observability/: __init__.py  context.py  hash.py  logging_config.py  metrics.py  spans.py  tracing.py
pipeline/: chat_attachments.py  chunker.py  embedder.py  extractor.py  ingestion.py  pinecone_helpers.py  retrieval_cache.py  retriever.py  storage.py
prompts/: __init__.py  browser_agent.py  chat_agent.py  judge.py  memory.py  orchestrator.py  project_chat.py  query_generator.py  search_summarizer.py  sql_agent.py
repositories/: base.py  chat_repository.py  document_repository.py  project_repository.py
scripts/: backfill_memory_from_redis.py
services/: chat_postprocess_service.py  chat_service.py  document_service.py  project_service.py
tasks/: document_tasks.py  memory_tasks.py
test_suite/: __main__.py  main.py  orchestrator.py  report.py  test_agent.py  test_chat.py  test_predefined.py
tests/: conftest.py  test_chat_export.py  test_chat_orchestration.py  test_chunker.py  test_eval_metrics.py  test_llm_stream_metrics.py  test_memory_api.py  test_memory_semantic.py  test_memory_tasks.py  test_observability_context.py  test_observability_hash.py  test_project_search.py  test_query_db.py  test_rate_limit.py  test_retrieval_cache.py  test_session_security.py  test_tool_planner.py  (+1 more)
(+167 files in other folders)
