[project]
name = "agenticrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "google-genai>=1.66.0",
    "openai>=2.28.0",
    "pinecone>=8.1.0",
    "pypdf>=6.9.0",
    "redis[search]>=7.3.0",
    "requests>=2.32.5",
]
