[project]
name = "agenticrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "google-genai>=1.66.0",
    "openai>=2.28.0",
    "pinecone>=8.1.0",
    "playwright>=1.58.0",
    "pypdf>=6.9.0",
    "redis[search]>=7.3.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.5",
    "faker>=40.11.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pymupdf>=1.27.2.2",
    "pymupdf4llm>=1.27.2.2",
    "python-docx>=1.2.0",
    "pinecone-text>=0.11.0",
    "python-multipart>=0.0.22",
    "minio>=7.2.20",
]
