[project]
name = "agenticrag"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.7.0",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "google-genai>=1.66.0",
    "litellm==1.83.0",
    "openai>=2.28.0",
    "pinecone>=8.1.0",
    "playwright>=1.58.0",
    "pypdf>=6.9.0",
    "redis[search]>=7.3.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.5",
    "faker>=40.11.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pymupdf>=1.27.2.2",
    "pymupdf4llm>=1.27.2.2",
    "prometheus-client>=0.23.1",
    "python-docx>=1.2.0",
    "pinecone-text>=0.11.0",
    "python-multipart>=0.0.22",
    "minio>=7.2.20",
    "sqlalchemy>=2.0.48",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "fastapi-users[oauth,sqlalchemy]>=15.0.5",
    "httpx-oauth>=0.16.1",
    "arq>=0.25.0",
    "greenlet>=3.3.2",
    "aiosqlite>=0.21.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-redis>=0.41b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.41b0",
    "opentelemetry-instrumentation-httpx>=0.41b0",
    "pgvector>=0.3.6",
]
